# CleverSwitch

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.claude/agent-memory/hidpp-protocol-expert/: MEMORY.md  windows-collections.md  x1b04-setCidReporting.md
.claude/agents/: hidpp-protocol-expert.md
.claude/skills/: write-subscriber-test.md
.claude/skills/build-cleverswitch/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.claude/skills/update-claude-md/: SKILL.md
.github/: FUNDING.yml
docs/: Installation.md
rules.d/: 42-cleverswitch.rules
scripts/: setup_startup_windows.ps1
scripts/linux/: build.sh  install.sh  switch_display_source.sh  uninstall.sh
scripts/mac/: build.sh  install.command  install_from_sources.sh  setup.sh  setup_mac.sh  setup_startup.command  uninstall.command
scripts/windows/: build.bat  install.bat  setup_startup_windows.bat  uninstall.bat
src/cleverswitch/: __main__.py  cli.py  config.py  discovery.py  errors.py  event_processors.py  factory.py  hooks.py  listeners.py  model.py  monitor.py  platform_setup.py  single_instance.py  switcher.py
src/cleverswitch/cache/: device_cache.py
src/cleverswitch/cli/: cli_module.py
src/cleverswitch/config/: config.py
src/cleverswitch/discovery/: discovery.py
src/cleverswitch/errors/: errors.py
src/cleverswitch/event/: device_connected_event.py  device_info_request_event.py  divert_event.py  diverted_host_change_event.py  event.py  external_undivert_event.py  external_unset_flag_event.py  hidpp_error_event.py  hidpp_notification_event.py  hidpp_response_event.py  (+5 more)
tests/: conftest.py  test_cli.py  test_config.py  test_disconnect_poller_subscriber.py  test_discovery.py  test_errors.py  test_factory.py  test_hooks.py  test_listeners.py  test_monitor.py  test_platform_setup.py  test_protocol.py  test_receiver_trigger_mac.py  test_wireless_status_subscriber.py
tests/cleverswitch/: test_single_instance.py
tools/: ble_hidpp_prototype.py
udev/: 99-cleverswitch.rules
(+112 files in other folders)
