[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cleverswitch"
version = "1.4.3"
description = "Synchronize host switching between Logitech MX Keys and MX Master 3"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
dependencies = [
    "hid >= 1.0.9 ; sys_platform == 'win32'",  # provides hidapi.dll on Windows; Linux/macOS use system libhidapi
    "pyyaml >= 6.0",
    "bleak >= 0.22, < 3; sys_platform == 'darwin'",  # 3.x uses the uv_build backend; can't build from sdist in Homebrew
    "pyobjc-framework-CoreBluetooth ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-mock >= 3.10",
    "pytest-cov >= 4.0",
]

[project.scripts]
cleverswitch = "cleverswitch.cli.cli_module:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov --cov-fail-under=90"

[tool.coverage.run]
source = ["src/cleverswitch"]
omit = [
    "src/cleverswitch/hidpp/transport.py",  # hardware I/O — not unit-testable
    "src/cleverswitch/__main__.py",          # entry-point runner — not unit-testable
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
